--- a/index.html
+++ b/index.html
@@ -1,58 +1,95 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Brian Min - Personal Website">
+    <meta name="author" content="Brian Min">
+    <link rel="shortcut icon" href="images/favicon.png">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <title>bymi15.github.io by bymi15</title>
-  </head>
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1>bymi15.github.io</h1>
-        <h2>Brian Min - personal website</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/bymi15" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
+    <title>Brian Min</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+</head>
+<body>
     <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <section class="jumbotron">
+            <div class="container">
+                <img class="col-md-3" src="images/logo.png">
+                <h1>Brian Min</h1>
+                <h2>Welcome to my personal site</h2>
+                <div class="visible-sm visible-xs"></div>
+            </div>
+        </section>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+        <nav class="navbar navbar-inverse">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="index.html">Brian Min</a>
+            </div>
+            <div>
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">University Projects</a></li>
+                <li><a href="#">Personal Projects</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+        <section>
+            <article>
+                <header>
+                    <h2>This is an article header</h2>
+                    <h3>This is a sub header</h3>
+                </header>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
+                <footer>
+                    - written by Brian Min
+                </footer>
+            </article>
+        </section>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+        <aside>
+            <div>
+                <h2>Social Links</h2>
+                <ul>
+                    <li><a href="">Facebook</a></li>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">LinkedIn</a></li>
+                </ul>
+            </div>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+            <div>
+                <h2>Related stories</h2>
+                <article>
+                    <header>
+                        <h3>This can be a heading for another story</h3>
+                    </header>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus.</p>
+                    <footer>
+                        <a href="">See More</a>
+                    </footer>
+                </article>
+            </div>
+        </aside>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
+        <footer>
+            &copy; 2015 Brian Min. All rights reserved.
+        </footer>
     </div>
 
-    
-  </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+</body>
 </html>
