--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Brian Min - Personal Website">
@@ -9,6 +11,7 @@
     <link rel="shortcut icon" href="images/favicon.png">
 
     <title>Brian Min</title>
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Optional theme -->
@@ -16,10 +19,10 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <div class="container">
+    <a name="page_top"></a>
+    <div class="container-fluid">
         <section class="jumbotron">
-            <div class="container">
-                <img class="pull-right" src="images/logo.png">
+            <div class="container-fluid">
                 <span id="title_heading">HELLO, I'M</span>
                 <h1>BRIAN MIN</h1>
                 <h2>Software Developer - Game Programmer - Problem Solver</h2>
@@ -27,32 +30,61 @@
             </div>
         </section>
 
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-          <div class="container-fluid">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+          <div class="container">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#">Brian Min</a>
+              <a class="navbar-brand" href="#page_top">Brian Min</a>
             </div>
-            <div>
+            <div class="navbar-collapse collapse navbar-right">
               <ul class="nav navbar-nav">
-                <li><a href="#">Home</a></li>
+                <li><a href="#page_top">Home</a></li>
                 <li><a href="#page_uni_proj">University Projects</a></li>
                 <li><a href="#page_personal_proj">Personal Projects</a></li>
                 <li><a href="#page_contact">Contact</a></li>
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Register</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
               </ul>
             </div>
           </div>
         </nav>
 
-        <section>
+        <section id="bg_about_me">
             <header>
-                <h2>About Me</h2>
-                <h3>I love programming.</h3>
+                <h2 id="subheadings">ABOUT ME</h2>
+                <hr>
+                <h3>I am a first year MEng Computer Science student studying at University College London <i class="fa fa-university"></i></h3>
             </header>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
+            <div id="about_me">
+                <div class="container">
+                    <div class="row centered">
+                        <div class="col-md-4">
+                            <i class="fa fa-heart-o"></i>
+                            <h4 class="text-center">Handsomely Crafted</h4>
+                            <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            <br/>
+                        </div>
+                        <div class="col-md-4">
+                            <i class="fa fa-flask"></i>
+                            <h4 class="text-center">Retina Ready</h4>
+                            <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            <br/>
+                        </div>
+                        <div class="col-md-4">
+                            <i class="fa fa-trophy"></i>
+                            <h4 class="text-center">Quality Theme</h4>
+                            <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            <br/>
+                        </div>
+                    </div>
+                </div>
+             </div>
+            <h3>Technical skills:</h3>
+            <ul>
+                <li>Java</li>
+                <li>C/C++</li>
+                <li>VB.NET</li>
+                <li>HTML5/CSS3/Bootstrap</li>
+                <li>Haskell</li>
+                <li>Git</li>
+            </ul>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
@@ -64,7 +96,7 @@
 
         <section>
             <header>
-                <h2>My University Projects</h2>
+                <h2 id="subheadings">My University Projects</h2>
             </header>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
@@ -82,7 +114,7 @@
 
         <section>
             <header>
-                <h2>My Personal Projects</h2>
+                <h2 id="subheadings">My Personal Projects</h2>
             </header>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
@@ -120,5 +152,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+    <!-- JQuery Smooth-Scrolling - by Chris Coyier: https://css-tricks.com/snippets/jquery/smooth-scrolling/ -->
+    <script>
+        $(function() {
+          $('a[href*=#]:not([href=#])').click(function() {
+            if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+              var target = $(this.hash);
+              target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+              if (target.length) {
+                $('html,body').animate({
+                  scrollTop: target.offset().top
+                }, 1000);
+                return false;
+              }
+            }
+          });
+        });
+    </script>
 </body>
 </html>
