--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
           <div class="container">
             <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <i class="fa fa-list" style="font-size:30px; color:white;"></i>
+                </button>
               <a class="navbar-brand" href="#page_top">Brian Min</a>
             </div>
             <div class="navbar-collapse collapse navbar-right">
