added more google fonts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,500,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Syncopate:400,700' rel='stylesheet' type='text/css'>
+
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Brian Min - Personal Website">
@@ -41,6 +44,7 @@
             <div class="navbar-collapse collapse navbar-right">
               <ul class="nav navbar-nav">
                 <li><a href="#page_top">Home</a></li>
+                <li><a href="#page_about_me">About Me</a></li>
                 <li><a href="#page_uni_proj">University Projects</a></li>
                 <li><a href="#page_personal_proj">Personal Projects</a></li>
                 <li><a href="#page_contact">Contact</a></li>
@@ -49,9 +53,10 @@
           </div>
         </nav>
 
+        <a name="page_about_me"></a>
         <section id="bg_about_me">
             <header>
-                <h2 id="subheadings">ABOUT ME</h2>
+                <h2 id="subheadings">About Me</h2>
                 <hr>
                 <h3>I am a first year MEng Computer Science student studying at University College London <i class="fa fa-university"></i></h3>
             </header>
