--- a/index.html
+++ b/index.html
@@ -60,49 +60,43 @@
                 <hr>
                 <h3>I am a first year MEng Computer Science student studying at University College London <i class="fa fa-university"></i></h3>
             </header>
+
             <div id="about_me">
-                <div class="container">
-                    <div class="row centered">
-                        <div class="col-md-4">
-                            <i class="fa fa-heart-o"></i>
-                            <h4 class="text-center">Handsomely Crafted</h4>
-                            <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                            <br/>
-                        </div>
-                        <div class="col-md-4">
-                            <i class="fa fa-flask"></i>
-                            <h4 class="text-center">Retina Ready</h4>
-                            <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                            <br/>
-                        </div>
-                        <div class="col-md-4">
-                            <i class="fa fa-trophy"></i>
-                            <h4 class="text-center">Quality Theme</h4>
-                            <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                            <br/>
-                        </div>
+                <div class="row centered">
+                    <div class="col-lg-4">
+                        <i class="fa fa-heart-o" style="color:#e60000;"></i>
+                        <h3>Interests</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <br/>
+                    </div>
+                    <div class="col-lg-4">
+                        <i class="fa fa-code" style="color:#30f000;"></i>
+                        <h3>Skills</h3>
+                            Java</br>
+                            C/C++</br>
+                            VB.NET</br>
+                            HTML5/CSS3/Bootstrap</br>
+                            Haskell</br>
+                            Git</br>
+                        <br/>
+                    </div>
+                    <div class="col-lg-4">
+                        <i class="fa fa-trophy" style="color:#00b3fe;"></i>
+                        <h3>Achievements</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <br/>
                     </div>
                 </div>
              </div>
-            <h3>Technical skills:</h3>
-            <ul>
-                <li>Java</li>
-                <li>C/C++</li>
-                <li>VB.NET</li>
-                <li>HTML5/CSS3/Bootstrap</li>
-                <li>Haskell</li>
-                <li>Git</li>
-            </ul>
+
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
         </section>
 
-        </br></br>
         <a name="page_uni_proj"></a>
-        </br></br>
 
-        <section>
+        <section id="bg_uni_projects">
             <header>
                 <h2 id="subheadings">My University Projects</h2>
             </header>
@@ -116,11 +110,9 @@
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
         </section>
 
-        </br></br>
         <a name="page_personal_proj"></a>
-        </br></br>
 
-        <section>
+        <section id="bg_personal_projects">
             <header>
                 <h2 id="subheadings">My Personal Projects</h2>
             </header>
@@ -134,21 +126,17 @@
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
         </section>
 
-        </br></br>
         <a name="page_contact"></a>
-        </br></br>
 
-        <section>
+        <section id="bg_contact">
             <div>
-                <h1>Any enquiries?</h1>
-                <h3>Connect with me</h3>
-                <ul>
-                    <li><a href="https://www.facebook.com/brian.min.965" target="_blank">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/bymi15/" target="_blank">Instagram</a></li>
-                    <li><a href="https://www.linkedin.com/in/bymi15" target="_blank">LinkedIn</a></li>
-                    <li><a href="https://github.com/bymi15" target="_blank">Github</a></li>
-                    <li><a href="mailto:bymi15@yahoo.com?Subject=Brian%20Min%20Website%20-%20Enquiry">Email</a></li>
-                </ul>
+                <h2 id="subheadings">Contact</h2>
+                <h3>Any enquiries? Connect with me</h3>
+                <p><a href="https://www.facebook.com/brian.min.965" target="_blank">Facebook <i class="fa fa-facebook-square"></i></a></p>
+                <p><a href="https://www.instagram.com/bymi15/" target="_blank">Instagram <i class="fa fa-instagram"></i></a></p>
+                <p><a href="https://www.linkedin.com/in/bymi15" target="_blank">LinkedIn <i class="fa fa-linkedin-square"></i></a></p>
+                <p><a href="https://github.com/bymi15" target="_blank">Github <i class="fa fa-github-square"></i></a></p>
+                <p><a href="mailto:bymi15@yahoo.com?Subject=Brian%20Min%20Website%20-%20Enquiry">Email <i class="fa fa-envelope"></i></a></p>
             </div>
         </section>
 
