--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
         <a name="page_uni_proj"></a>
 
         <section id="bg_uni_projects">
-            <header>
+            <header class="marginBelow">
                 <h2 id="subheadings">My University Projects</h2>
             </header>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
+
+
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
@@ -113,9 +114,55 @@
         <a name="page_personal_proj"></a>
 
         <section id="bg_personal_projects">
-            <header>
+            <header class="marginBelow">
                 <h2 id="subheadings">My Personal Projects</h2>
             </header>
+            <div class="col-lg-4">
+                <div class="project">
+                    <div class="slideshow">
+                        <img src="images/musicTV1.png" alt=""/>
+                        <img src="images/musicTV2.png" alt=""/>
+                        <img src="images/musicTV3.png" alt=""/>
+                        <img src="images/musicTV4.png" alt=""/>
+                    </div>
+
+                    <div class="projectDesc">
+                        <h3 class="projectName">Music TV</h3>
+                        <p>HackKings 2015</p>
+                        <p>Android/Java/PHP/MySQL/HTML5/CSS3/Bootstrap</p>
+                    </div>
+                </div> <!--project-->
+            </div>
+            <div class="col-lg-4">
+                <div class="project">
+                    <img src="images/logo.png" alt=""/>
+                    <div class="projectDesc">
+                        <h3 class="projectName">Project2</h3>
+                        <p>Location-Date</p>
+                        <p>Skills Used</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="project">
+                    <img src="images/logo.png" alt=""/>
+                    <div class="projectDesc">
+                        <h3 class="projectName">Project3</h3>
+                        <p>Location-Date</p>
+                        <p>Skills Used</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="project">
+                    <img src="images/logo.png" alt=""/>
+                    <div class="projectDesc">
+                        <h3 class="projectName">Project4</h3>
+                        <p>Location-Date</p>
+                        <p>Skills Used</p>
+                    </div>
+                </div>
+            </div>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
@@ -149,8 +196,8 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-    <!-- JQuery Smooth-Scrolling - by Chris Coyier: https://css-tricks.com/snippets/jquery/smooth-scrolling/ -->
-    <script>
+    <!--Smooth Scroll - by Karl Swedberg: https://github.com/kswedberg/jquery-smooth-scroll; License: MIT-->
+    <script type="text/javascript">
         $(function() {
           $('a[href*=#]:not([href=#])').click(function() {
             if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
@@ -166,5 +213,32 @@
           });
         });
     </script>
+
+    <!--Simplest JQuery Slideshow - by Jonathon Snook - 2009: http://snook.ca/archives/javascript/simplest-jquery-slideshow-->
+    <script type="text/javascript">
+        $(function(){
+            $('.slideshow img:gt(0)').hide();
+            setInterval(function(){
+              $('.slideshow :first-child')
+                .fadeOut(1000)
+                .next('img')
+                .fadeIn(1000)
+                .end()
+                .appendTo('.slideshow');
+            }, 3000);
+        });
+    </script>
+
+    <!--Google Analytics-->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-71639378-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+
 </body>
 </html>
