added alot of new stuff

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="main.css">
+
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css">
 </head>
 <body>
     <a name="page_top"></a>
@@ -101,9 +103,27 @@
                 <h2 id="subheadings">My University Projects</h2>
             </header>
 
+            <div class="col-lg-4">
+                <div class="project">
+                    <h3 class="projectName">ENGUINO COPTER</h3>
 
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
+                    <ul id="slider3">
+                        <li><img src="images/copter1.png" alt=""/></li>
+                        <li><img src="images/copter2.png" alt=""/></li>
+                        <li><img src="images/copter3.png" alt=""/></li>
+                    </ul>
+
+                    <div class="projectDesc">
+                        <h3 class="projectName">Engduino Copter</h3>
+                        <p>Programming coursework 2015</p>
+                        <p class="projectSkills">C / Processing-Java / Engduino-arduino</p>
+                        </br>
+                        <p>2D endless side-scrolling helicopter game where the user moves a helicopter on the screen using an engduino-arduino controller. The objective of the game is to avoid crashing into the walls or the boundaries of the screen. This game was inspired by FlappyBirds.</p></br>
+                        <a href="https://github.com/bymi15/EngduinoCopter" target="_blank"><i class="fa fa-link"> Read more</i></a>
+                    </div>
+                </div> <!--project-->
+            </div>
+
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
@@ -119,29 +139,44 @@
             </header>
             <div class="col-lg-4">
                 <div class="project">
-                    <div class="slideshow">
-                        <img src="images/musicTV1.png" alt=""/>
-                        <img src="images/musicTV2.png" alt=""/>
-                        <img src="images/musicTV3.png" alt=""/>
-                        <img src="images/musicTV4.png" alt=""/>
-                    </div>
+                    <h3 class="projectName">MUSIC TV</h3>
+
+                    <ul id="slider1">
+                        <li><img src="images/musicTV1.png" alt=""/></li>
+                        <li><img src="images/musicTV2.png" alt=""/></li>
+                        <li><img src="images/musicTV3.png" alt=""/></li>
+                        <li><img src="images/musicTV4.png" alt=""/></li>
+                    </ul>
 
                     <div class="projectDesc">
                         <h3 class="projectName">Music TV</h3>
                         <p>HackKings 2015</p>
-                        <p>Android/Java/PHP/MySQL/HTML5/CSS3/Bootstrap</p>
+                        <p class="projectSkills">Android/Java/PHP/MySQL/HTML5/CSS3/Bootstrap</p>
+                        </br>
+                        <p>Worked in a team of four and developed a system that allows users to request a song/artist of their choice or up/down vote existing songs in the queue. The tracks are automatically played in an embedded youtube video with the highest voted songs prioritised. </p></br>
+                        <a href="http://devpost.com/software/music-tv-music-videos-for-the-masses-finally" target="_blank"><i class="fa fa-link"> Read more</i></a>
                     </div>
                 </div> <!--project-->
             </div>
             <div class="col-lg-4">
                 <div class="project">
-                    <img src="images/logo.png" alt=""/>
+                    <h3 class="projectName">TASK SCHEDULER</h3>
+
+                    <ul id="slider2">
+                        <li><img src="images/taskScheduler1.png" alt=""/></li>
+                        <li><img src="images/taskScheduler2.png" alt=""/></li>
+                        <li><img src="images/taskScheduler3.png" alt=""/></li>
+                    </ul>
+
                     <div class="projectDesc">
-                        <h3 class="projectName">Project2</h3>
-                        <p>Location-Date</p>
-                        <p>Skills Used</p>
+                        <h3 class="projectName">Task Scheduler</h3>
+                        <p>Helped a friend organise his exam revision - 2014</p>
+                        <p class="projectSkills">Java/Swing GUI</p>
+                        </br>
+                        <p>Allows the user to add certain tasks to a table and set a reminder to do the task at a certain time and date. The tasks are displayed in a table and are automatically sorted by date/time.</p></br>
+                        <a href="#" target="_blank"><i class="fa fa-link"> Read more</i></a>
                     </div>
-                </div>
+                </div> <!--project-->
             </div>
             <div class="col-lg-4">
                 <div class="project">
@@ -196,40 +231,14 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-    <!--Smooth Scroll - by Karl Swedberg: https://github.com/kswedberg/jquery-smooth-scroll; License: MIT-->
-    <script type="text/javascript">
-        $(function() {
-          $('a[href*=#]:not([href=#])').click(function() {
-            if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-              var target = $(this.hash);
-              target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-              if (target.length) {
-                $('html,body').animate({
-                  scrollTop: target.offset().top
-                }, 1000);
-                return false;
-              }
-            }
-          });
-        });
-    </script>
+    <!-- bxSlider Javascript files -->
+    <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
+    <script type="text/javascript" src="js/bxslider.js"></script>
 
-    <!--Simplest JQuery Slideshow - by Jonathon Snook - 2009: http://snook.ca/archives/javascript/simplest-jquery-slideshow-->
-    <script type="text/javascript">
-        $(function(){
-            $('.slideshow img:gt(0)').hide();
-            setInterval(function(){
-              $('.slideshow :first-child')
-                .fadeOut(1000)
-                .next('img')
-                .fadeIn(1000)
-                .end()
-                .appendTo('.slideshow');
-            }, 3000);
-        });
-    </script>
+    <!-- Smooth scroll Javascript file -->
+    <script type="text/javascript" src="js/smoothscroll.js"></script>
 
-    <!--Google Analytics-->
+    <!-- Google Analytics
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -239,6 +248,7 @@
       ga('create', 'UA-71639378-1', 'auto');
       ga('send', 'pageview');
     </script>
+    -->
 
 </body>
 </html>
